--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="app.css">
-  <script src="app.js" defer></script>
+  <script src="card.js" type="module" defer></script>
+  <script src="app.js" type="module" defer></script>
   <title>TODO LIST APP</title>
 </head>
 
@@ -36,99 +37,6 @@
     <!-- main body start -->
     <div class="main-body container d-flex align-content-start flex-wrap justify-content-center justify-content-evenly"
       id="mainBody">
-
-      <div class="card text-bg-primary mb-4" style="max-width: 18rem;">
-        <div class="card-header">
-          <div class="row">
-            <div class="col">Date</div>
-            <div class="col text-end">
-              <i class="fa-solid fa-pen-to-square mx-3"></i>
-              <i class="fa-solid fa-xmark"></i>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo odit perferendis quod, incidunt
-            adipisci nobis aperiam quam. Excepturi recusandae, ullam cumque sapiente optio atque vitae, dignissimos
-            impedit nam vero ad! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde ab explicabo voluptate
-            inventore debitis quaerat aliquam error ex? Perspiciatis, eaque? Reprehenderit ducimus quae, in earum
-            laborum repellat quidem molestias fugiat?</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-secondary mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Secondary card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-success mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-danger mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Danger card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-warning mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Warning card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-info mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Info card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-light mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Light card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-dark mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Dark card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
-
-      <div class="card text-bg-success mb-4" style="max-width: 18rem;">
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Success card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
-      </div>
 
     </div>
     <!-- main body end -->
