--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Todo</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Add Todo</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Due Date</p>
-          <input type="date" class="form-control" name="" id="date" />
-          <br />
-          <p>Task Title</p>
+          <p>Todo</p>
           <input type="text" class="form-control" name="" id="title" />
           <div id="msg1"></div>
           <br />
-          <p>Description</p>
-          <textarea name="" class="form-control" id="description" cols="30" rows="5"></textarea>
+          <p>Due Date</p>
+          <input type="date" class="form-control" name="" id="date" />
+          <br />
+          <!-- <p>Description</p>
+          <textarea name="" class="form-control" id="description" cols="30" rows="5"></textarea> -->
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
