--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-dark bg-dark mb-4 py-2">
       <div class="container-fluid">
         <span class="navbar-brand mb-0 h1 mx-2">
-          <h2>Jhon Umar</h2>
+          <h2 id="name">Guest</h2>
         </span>
         <span id="addTodoBtn" class="btn btn-sm btn-primary py-2 mx-2" data-bs-toggle="modal" data-bs-target="#Modal">
           <i class="fa-solid fa-plus mx-1 border border-2 rounded-1 p-1"></i>
@@ -89,163 +89,230 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
             Close
           </button>
-          <button type="submit" id="update" class="btn btn-primary" data-bs-dismiss="modal">Update</button>
+          <button type="submit" id="update" class="btn btn-primary">Update</button>
         </div>
       </div>
     </div>
   </div>
+  <!-- modal for name start -->
+  <!-- Button trigger modal -->
+  <button id="triggerBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal3"
+    style="display: none;">
+  </button>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Enter Your Name</h5>
+          <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        </div>
+        <div class="modal-body">
+          <input class="form-control" id="myInput" type="text" aria-label="default input example">
+          <div id="msg3"></div>
+        </div>
+        <div class="modal-footer">
+          <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+          <button type="button" class="btn btn-primary" id="saveName">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal for name end -->
+
   <!-- adding script -->
   <script>
-          const card = {
-            cardString: `<div class="card text-bg-primary mb-4" style="max-width: 18rem;">
-        <div class="card-header">
-            <div class="row">
-                <div class="col cardDate"></div>
-                <div class="col text-end">
-                    <i class="fa-solid fa-pen-to-square mx-3" data-bs-toggle="modal" data-bs-target="#updateTask"></i>
-                    <i class="fa-solid fa-xmark"></i>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-        <h5 class="card-title mb-3 cardTitle"></h5>
-        </div>
-      </div>`,
-            convertStringToHTML: function (str, id) {
-              const parser = new DOMParser();
-              const parsedString = parser.parseFromString(str, 'text/html');
-              parsedString.body.firstChild.setAttribute('id', id);
-              return parsedString.body.firstChild;
-            }
+    const card = {
+      cardString: `<div class="card text-bg-primary mb-4" style="max-width: 18rem;">
+                            <div class="card-header">
+                                <div class="row">
+                                    <div class="col cardDate"></div>
+                                    <div class="col text-end">
+                                        <i class="fa-solid fa-pen-to-square mx-3" data-bs-toggle="modal" data-bs-target="#updateTask"></i>
+                                        <i class="fa-solid fa-xmark"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                            <h5 class="card-title mb-3 cardTitle"></h5>
+                            </div>
+                          </div>`,
+      convertStringToHTML: function (str, id) {
+        const parser = new DOMParser();
+        const parsedString = parser.parseFromString(str, 'text/html');
+        parsedString.body.firstChild.setAttribute('id', id);
+        return parsedString.body.firstChild;
+      }
+    }
+    const addTodoBtn = document.querySelector('#addTodoBtn');
+    const mainBody = document.querySelector('#mainBody');
+    const modal = document.querySelector('#Modal');
+    const msg1 = document.querySelector('#msg1');
+    const msg2 = document.querySelector('#msg2');
+    const date = document.querySelector('#date');
+    const title = document.querySelector('#title');
+    const saveTodo = document.querySelector('#save');
+    const update = document.querySelector('#update');
+    const currentDate = new Date();
+    const year = currentDate.getFullYear();
+    const month = (currentDate.getMonth() + 1).toString().padStart(2, "0");
+    const day = currentDate.getDate().toString().padStart(2, "0");
+    const today = day + '/' + month + '/' + year;
+    const todoList = [];
+    //for update modal
+    const dateInputUpdated = document.getElementById('dateInputUpdated');
+    const titleInputUpdated = document.getElementById('titleInputUpdated');
+    const key = document.getElementById('key');
+
+    function validateModal() {
+      if (title.value) {
+        const cardData = {};
+        //setting date
+        if (date.value) {
+          const str = date.value.split('-');
+          cardData.date = str[2] + '/' + str[1] + '/' + str[0];
+        } else {
+          cardData.date = today;
+        }
+        //seeting title
+        cardData.title = '💡 ' + title.value;
+        //checking for todoList key
+        if (localStorage.getItem('todoList')) {
+          const todoList = JSON.parse(localStorage.getItem('todoList'));
+          todoList.push(cardData);
+          const data = JSON.stringify(todoList);
+          localStorage.setItem('todoList', data)
+          resetModal();
+          hideModal(saveTodo);
+          showTodos();
+        } else {
+          const todoList = [cardData];
+          localStorage.setItem('todoList', JSON.stringify(todoList));
+          resetModal();
+          hideModal(saveTodo);
+          showTodos();
+        }
+      } else {
+        msg1.innerText = 'Title can not be empty';
+      }
+    }
+
+    function resetModal() {
+      date.value = '';
+      title.value = '';
+      msg1.innerText = '';
+    }
+
+    function hideModal(modal) {
+      modal.setAttribute('data-bs-dismiss', 'modal');
+      modal.removeEventListener('click', validateModal);
+      modal.click();
+      modal.addEventListener('click', validateModal);
+      modal.removeAttribute('data-bs-dismiss');
+    }
+
+    function createCard(arr, id) {
+      const newCard = card.convertStringToHTML(card.cardString, id);
+      //adding event listener on edit icon 
+      newCard.children[0].children[0].children[1].children[0].addEventListener('click', editCard);
+      //adding event listener on cross/delete icon 
+      newCard.children[0].children[0].children[1].children[1].addEventListener('click', deleteCard);
+      newCard.querySelector('.col').textContent = `Date: ${arr[id].date}`;
+      newCard.querySelector('.card-body').children[0].innerText = arr[id].title;
+      return newCard;
+    }
+
+    function deleteCard() {
+      const id = parseInt(this.parentElement.parentElement.parentElement.parentElement.getAttribute('id'));
+      const todoList = JSON.parse(localStorage.getItem('todoList'));
+      todoList.splice(id, 1);
+      localStorage.setItem('todoList', JSON.stringify(todoList));
+      showTodos();
+    }
+
+    function showTodos() {
+      const list = localStorage.getItem('todoList');
+      if (list) {
+        const todoList = JSON.parse(list);
+        if (todoList.length !== 0) {
+          mainBody.textContent = '';
+          for (let i = 0; i < todoList.length; i++) {
+            const card = createCard(todoList, i);
+            mainBody.appendChild(card);
           }
+        } else {
+          mainBody.textContent = "NO TODO's";
+        }
+      } else {
+        mainBody.textContent = "NO TODO's";
+      }
+    }
 
-          const addTodoBtn = document.querySelector('#addTodoBtn');
-          const mainBody = document.querySelector('#mainBody');
-          const modal = document.querySelector('#Modal');
-          const msg1 = document.querySelector('#msg1');
-          const msg2 = document.querySelector('#msg2');
-          const date = document.querySelector('#date');
-          const title = document.querySelector('#title');
-          const saveTodo = document.querySelector('#save');
-          const update = document.querySelector('#update');
-          const currentDate = new Date();
-          const year = currentDate.getFullYear();
-          const month = (currentDate.getMonth() + 1).toString().padStart(2, "0");
-          const day = currentDate.getDate().toString().padStart(2, "0");
-          const today = day + '/' + month + '/' + year;
-          const todoList = [];
-          //for update modal
-          const dateInputUpdated = document.getElementById('dateInputUpdated');
-          const titleInputUpdated = document.getElementById('titleInputUpdated');
-          const key = document.getElementById('key');
-
-          function validateModal() {
-            if (title.value) {
-              const cardData = {};
-              //setting date
-              if (date.value) {
-                const str = date.value.split('-');
-                cardData.date = str[2] + '/' + str[1] + '/' + str[0];
-              } else {
-                cardData.date = today;
-              }
-              //seeting title
-              cardData.title = '💡 ' + title.value;
-              todoList.push(cardData);
-
-              resetModal();
-              hideModal();
-              showTodos(todoList);
-            } else {
-              msg1.innerText = 'Title can not be empty';
-            }
+    function getName() {
+      if (localStorage.getItem('name')) {
+        const name = localStorage.getItem('name');
+        document.getElementById('name').innerText = name;
+      } else {
+        document.getElementById('triggerBtn').click();
+        const saveName = document.getElementById('saveName')
+        saveName.addEventListener('click', function () {
+          const name = document.getElementById('myInput').value;
+          if (name) {
+            localStorage.setItem('name', name);
+            document.getElementById('name').innerText = name;
+            hideModal(saveName);
+          } else {
+            document.getElementById('msg3').innerText = 'Please enter your name';
           }
+        });
+      }
+    }
 
-          function resetModal() {
-            date.value = '';
-            title.value = '';
-            msg1.innerText = '';
-          }
+    function editCard() {
+      //getting card id which was dynamically added
+      const id = this.parentElement.parentElement.parentElement.parentElement.getAttribute('id');
+      const card = this.parentElement.parentElement.parentElement.parentElement;
+      //formatting date here
+      const cardDate = card.querySelector('.cardDate').innerText.slice(6);
+      const cardTitle = card.querySelector('.cardTitle').innerText;
+      const newDate = cardDate.split('/')
+      const formattedDate = newDate[2] + '-' + newDate[1] + '-' + newDate[0];
+      dateInputUpdated.value = formattedDate
+      titleInputUpdated.value = cardTitle;
+      key.value = id;
+    }
 
-          function hideModal() {
-            saveTodo.setAttribute('data-bs-dismiss', 'modal');
-            saveTodo.removeEventListener('click', validateModal);
-            saveTodo.click();
-            saveTodo.addEventListener('click', validateModal);
-            saveTodo.removeAttribute('data-bs-dismiss');
-          }
+    function validateUpdateModal() {
+      if (titleInputUpdated.value) {
+        const cardData = {};
+        //setting date
+        if (dateInputUpdated.value) {
+          const str = dateInputUpdated.value.split('-');
+          cardData.date = str[2] + '/' + str[1] + '/' + str[0];
+        } else {
+          cardData.date = today;
+        }
+        //seeting title
+        //checking for bulb icon
+        if (titleInputUpdated.value.includes('💡')) {
+          cardData.title = titleInputUpdated.value;
+        } else {
+          cardData.title = '💡 ' + titleInputUpdated.value;
+        }
+        const todoList = JSON.parse(localStorage.getItem('todoList'));
+        todoList[parseInt(key.value)] = cardData;
+        localStorage.setItem('todoList', JSON.stringify(todoList));
+        hideModal(update);
+        showTodos();
+      } else {
+        msg2.innerText = 'Title can not be empty';
+      }
+    }
 
-          function createCard(id) {
-            const newCard = card.convertStringToHTML(card.cardString, id);
-            //adding event listener on edit icon 
-            newCard.children[0].children[0].children[1].children[0].addEventListener('click', editCard);
-            //adding event listener on cross/delete icon 
-            newCard.children[0].children[0].children[1].children[1].addEventListener('click', deleteCard);
-            newCard.querySelector('.col').textContent = `Date: ${todoList[id].date}`;
-            newCard.querySelector('.card-body').children[0].innerText = todoList[id].title;
-            return newCard;
-          }
-
-          function deleteCard() {
-            const id = parseInt(this.parentElement.parentElement.parentElement.parentElement.getAttribute('id'));
-            todoList.splice(id, 1);
-            showTodos(todoList);
-          }
-
-          function showTodos(arr) {
-            if (arr.length !== 0) {
-              mainBody.textContent = '';
-              for (let i = 0; i < arr.length; i++) {
-                const card = createCard(i);
-                mainBody.appendChild(card);
-              }
-            } else {
-              mainBody.textContent = "NO TODO's";
-            }
-          }
-
-          function editCard() {
-            //getting card id which was dynamically added
-            const id = this.parentElement.parentElement.parentElement.parentElement.getAttribute('id');
-            const card = this.parentElement.parentElement.parentElement.parentElement;
-            //formatting date here
-            const cardDate = card.querySelector('.cardDate').innerText.slice(6);
-            const cardTitle = card.querySelector('.cardTitle').innerText;
-            const newDate = cardDate.split('/')
-            const formattedDate = newDate[2] + '-' + newDate[1] + '-' + newDate[0];
-            dateInputUpdated.value = formattedDate
-            titleInputUpdated.value = cardTitle;
-            key.value = id;
-          }
-
-          function validateUpdateModal() {
-            if (titleInputUpdated.value) {
-              const cardData = {};
-              //setting date
-              if (dateInputUpdated.value) {
-                const str = dateInputUpdated.value.split('-');
-                cardData.date = str[2] + '/' + str[1] + '/' + str[0];
-              } else {
-                cardData.date = today;
-              }
-              //seeting title
-              //checking for bulb icon
-              if (titleInputUpdated.value.includes('💡')) {
-                cardData.title = titleInputUpdated.value;
-              } else {
-                cardData.title = '💡 ' + titleInputUpdated.value;
-              }
-              todoList[parseInt(key.value)] = cardData;
-              showTodos(todoList);
-            } else {
-              msg2.innerText = 'Title can not be empty';
-            }
-          }
-
-          saveTodo.addEventListener('click', validateModal);
-          update.addEventListener('click', validateUpdateModal);
-
-          showTodos(todoList);
+    saveTodo.addEventListener('click', validateModal);
+    update.addEventListener('click', validateUpdateModal);
+    window.onload = getName();
+    showTodos();
   </script>
 </body>
 
